content: Add switch to disable new content rendering timeout.

In e.g. some headless environments, we care about deterministic
rendering results. As the new content rendering timeout can affect page
rendering, we'd like a way to disable it.

This patch adds a command line switch to that effect.

Change-Id: Ib0c09aa57df82665ffb4f1290c8ad5d2761aa7bf
Bug: 776292
Reviewed-on: https://chromium-review.googlesource.com/725324
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510030}
Former-commit-id: b2158cecac2d6924556991b30b15ff53205b06f9